--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,10 @@
 [[redirects]]
-  from = "/Profil"
+  from = "/Profil/"
   to = "/"
   status = 301
 
   [[redirects]]
   from = "/A-propos-de-kasa"
-  to = "/"
-  status = 301
-
-  [[redirects]]
-  from = "/Contact"
   to = "/"
   status = 301
 
@@ -21,5 +16,4 @@
 [build]
   command = "npm run build"
   publish = "build"
-
 
